add if incorrect index on major operations